# Qt-tutorial

./: CMakeLists.txt  Main.qml  README.md  Task.cpp  Task.h  Taskmanager.cpp  Taskmanager.h  main.cpp
